Compose: dev/prod split (dev default on :8080, prod overlay for 80/443)

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,26 +1,14 @@
 services:
-  caddy:
-    image: caddy:2
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile:ro
-      - caddy_data:/data
-      - caddy_config:/config
-    depends_on:
-      - backend
-      - frontend
-    networks:
-      - appnet
-    restart: unless-stopped
-
   backend:
     build: ../backend
     environment:
-      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
-      TELEGRAM_ALLOWLIST: ${TELEGRAM_ALLOWLIST}
-      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL: postgresql+psycopg://familyops:familyops@db:5432/familyops
+      AUTO_MIGRATE: "1"
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-}
+      TELEGRAM_ALLOWLIST: ${TELEGRAM_ALLOWLIST:-}
+    depends_on:
+      db:
+        condition: service_healthy
     networks:
       - appnet
     restart: unless-stopped
@@ -31,9 +19,45 @@ services:
       - appnet
     restart: unless-stopped
 
+  caddy:
+    image: caddy:2
+    depends_on:
+      backend:
+        condition: service_started
+      frontend:
+        condition: service_started
+    ports:
+      - "8080:80"
+    volumes:
+      - ./Caddyfile.local:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
+      - caddy_config:/config
+    networks:
+      - appnet
+    restart: unless-stopped
+
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_DB: familyops
+      POSTGRES_USER: familyops
+      POSTGRES_PASSWORD: familyops
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./db/init:/docker-entrypoint-initdb.d:ro
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U familyops -d familyops"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+    networks:
+      - appnet
+    restart: unless-stopped
+
 volumes:
   caddy_data:
   caddy_config:
+  pgdata:
 
 networks:
   appnet:
