--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: Build Images (GHCR)
 on:
   push:
     branches: ["main"]
+    workflow_dispatch:
 
 permissions:
   contents: read
@@ -29,8 +30,9 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/brinkhorst-family-ops-frontend:latest
-            ghcr.io/${{ github.repository_owner }}/brinkhorst-family-ops-frontend:${{ github.sha }}
+            tags: |
+              ghcr.io/${{ github.repository_owner }}/brinkhorst-family-ops-frontend:sha-${{ github.sha }}
+              ghcr.io/${{ github.repository_owner }}/brinkhorst-family-ops-frontend:stable
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -41,7 +43,8 @@ jobs:
           file: ./backend/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/brinkhorst-family-ops-backend:latest
-            ghcr.io/${{ github.repository_owner }}/brinkhorst-family-ops-backend:${{ github.sha }}
+            tags: |
+               ghcr.io/${{ github.repository_owner }}/brinkhorst-family-ops-backend:sha-${{ github.sha }}
+               ghcr.io/${{ github.repository_owner }}/brinkhorst-family-ops-backend:stable
           cache-from: type=gha
           cache-to: type=gha,mode=max
