--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -24,6 +24,9 @@ services:
       AUTO_MIGRATE: "0"
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-}
       TELEGRAM_ALLOWLIST: ${TELEGRAM_ALLOWLIST:-}
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
+      OPENAI_MODEL: gpt-4o-mini
+      OPENAI_TIMEOUT_SECONDS: ${OPENAI_TIMEOUT_SECONDS:-}
     depends_on:
       db:
         condition: service_healthy
