--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - ./Caddyfile.local:/etc/caddy/Caddyfile:ro
       - caddy_data:/data
       - caddy_config:/config
+    environment:
+      DENNIS_PWHASH: ${DENNIS_PWHASH:-}
     depends_on:
       - backend
       - frontend
