chore: track ec2 compose and wire DENNIS_PWHASH into caddy

--- a/infra/.env.example
+++ b/infra/.env.example
@@ -1,1 +1,4 @@
-DENNIS_PWHASH= # bcrypt hash; if set via .env, escape $ as $$ (e.g. $$2a$$14$$...)
+# DO NOT COMMIT infra/.env
+# Generate bcrypt hash:
+#   docker run --rm caddy:2 caddy hash-password --plaintext 'YOUR_LONG_PASSWORD'
+DENNIS_PWHASH='$2a$14$REPLACE_WITH_HASH'
