Configure separate OpenAI models for recipes/shop and activities

--- a/infra/.env.example
+++ b/infra/.env.example
@@ -2,3 +2,6 @@
 # Generate bcrypt hash:
 #   docker run --rm caddy:2 caddy hash-password --plaintext 'YOUR_LONG_PASSWORD'
 DENNIS_PWHASH='$2a$14$REPLACE_WITH_HASH'
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_MODEL_ACTIVITIES=gpt-5.2
