--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -27,7 +27,8 @@ services:
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-}
       TELEGRAM_ALLOWLIST: ${TELEGRAM_ALLOWLIST:-}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
-      OPENAI_MODEL: gpt-4o-mini
+      OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4o-mini}
+      OPENAI_MODEL_ACTIVITIES: ${OPENAI_MODEL_ACTIVITIES:-gpt-5.2}
       OPENAI_TIMEOUT_SECONDS: ${OPENAI_TIMEOUT_SECONDS:-}
     depends_on:
       db:
